hphp/test/zend/bad/ext/standard/tests/general_functions/getopt.php
<?php
	var_dump(getopt("d:m:j:vht"));
?>